:bug: Fix wrong font-weight

--- a/assets/scss/_config.scss
+++ b/assets/scss/_config.scss
@@ -18,6 +18,7 @@ $font-styles: (
   ts1B: (
     font-family: $ff-helvetica,
     font-size: 14px,
+    font-weight: bold,
     line-height: 15 / 14,
     letter-spacing: (-15em/1000)
   ),
